AARCH64 staging fail to build

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • port-stage-aarch64
    • Affects Version/s: port-stage-aarch64
    • Component/s: hotspot
    • None
    • gc
    • linux

        AARCH64 staging fails to build from source due to out of date calls to ReservedSpace constructor in metaspace.cpp. These calls are in AARCH64 conditionalised code and contain an extra 0 argument.

        The attached patch fixes this problem.

              Assignee:
              Ed Nevill
              Reporter:
              Ed Nevill
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved:

                  Estimated:
                  Original Estimate - 1 day
                  1d
                  Remaining:
                  Remaining Estimate - 1 day
                  1d
                  Logged:
                  Time Spent - Not Specified
                  Not Specified