8071563: AARCH64 staging fail to build

Fixed build problem after merge 8064457 changes.

Reviewed-by: kvn, goetz